--- a/style.css
+++ b/style.css
@@ -1,11 +1,18 @@
-div {
+body {
+	margin: 0;
+	font-family: Helvetica;
+}
+
+#container {
 	display: flex;
 	justify-content: center;
 	align-items: center;
+	height: 100vh;
+	flex-direction: column;
 }
 
 
-img {
-	height: 150px;
-	width: 150px;
+#logo {
+	height: 70px;
+	width: 70px;
 }
