--- a/style.css
+++ b/style.css
@@ -13,10 +13,10 @@ body {
 
 
 #logo {
-	height: 70px;
-	width: 70px;
+	height: 150px;
+	width: 220px;
 }
 
 h1 {
-	color: red;
+	color: #00A2D2;
 }
